--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <h1>SPLITTER x</h1>
+    <h1>SPLITTER XX</h1>
 </header>
  
  
@@ -24,7 +24,7 @@
   <div class="container flow">
     
 <div class="Bill">
-<h2 class="heads">Bill</h2>
+<h2 class="heads">bill</h2>
  <input class="bill interactive" type="input" value="10">
 
 </div>
